# wopr-installer

./: .env  .env.example  .gitignore  README.md  TROUBLESHOOTING.md  main.py  manifest.json  orchestrator.py  requirements.txt
ai-engine/: Dockerfile  main.py  requirements.txt
containers/: README.md  deploy.sh
control_plane/: __init__.py  authentik_apps.py  authentik_integration.py  callbacks.py  config.py  dashboard_api.py  database.py  job_store.py  logging_config.py  mesh_api.py  orchestrator.py  pdf_generator.py  provider_health.py  provision.py  run_server.py  stripe_catalog.py  stripe_catalog.py.bak.20260209  vps_provisioner.py
dashboard/: package-lock.json  package.json  svelte.config.js  vite.config.js
docs/: GLOSSARY.md
scripts/: deploy.sh  migrate_to_mesh_replication.sh  setup-authentik-apps.py  wopr_common.sh  wopr_install.sh  wopr_verify.sh
systemd/: nebula.service  wopr-app@.service  wopr-approval-dashboard.service  wopr-production-deployer.service
tests/: conftest.py  test_config.py  test_providers.py
wopr-approval-dashboard/: Dockerfile  app.py
wopr-audit/python/: pyproject.toml
wopr-audit/python/src/wopr_audit/: __init__.py  config.py  context.py  daemon.py  schema.py
wopr-audit/python/src/wopr_audit/hooks/: __init__.py  webhook.py
wopr-audit/python/src/wopr_audit/middleware/: fastapi_mw.py  flask_mw.py
wopr-audit/python/src/wopr_audit/storage/: __init__.py  base.py  json_file.py  postgres.py  sqlite.py
wopr-deployment-queue/: Dockerfile  queue-manager.py
wopr-installer/: .env  .env.example  .gitignore  main.py  manifest.json  (+2 more)
(+324 files in other folders)
